--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@reduxjs/toolkit": "^1.8.4",
+    "@tanstack/react-query": "^4.1.3",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
