--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
